fix padding on small viewport
fix padding on small viewport

--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -329,22 +329,24 @@ $breakpoint-attributes: (
     min-width: map-deep-get($breakpoint-attributes, (default, small, min-width));
     margin-left: auto;
     margin-right: auto;
-    padding: 0 20px;
+    padding-left: 80px;
+    padding-right: 80px;
     box-sizing: border-box;
 
     // make sure there is 120px space between the content and nav bar on xl and l
     @include breakpoints-from(large) {
       box-sizing: unset;
-      padding-right: 120px;
       padding-left: 120px;
+      padding-right: 120px;
       margin-left: 0px;
     }
 
-    @include breakpoint(medium) {
-      padding-right: 80px;
-      padding-left: 80px;
+    @include breakpoint(small) {
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
+
   @include inTargetIde {
     @include breakpoint-content()
   }
